--- a/charts/deluge/templates/bt-port-svc.yaml
+++ b/charts/deluge/templates/bt-port-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "qbittorrent.fullname" . }}-bt-port
+  name: {{ template "deluge.fullname" . }}-bt-port
   labels:
-    app.kubernetes.io/name: {{ include "qbittorrent.name" . }}
-    helm.sh/chart: {{ include "qbittorrent.chart" . }}
+    app.kubernetes.io/name: {{ include "deluge.name" . }}
+    helm.sh/chart: {{ include "deluge.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 {{- if .Values.btService.labels }}
@@ -48,5 +48,5 @@ spec:
       nodePort: {{.Values.btService.nodePort}}
 {{ end }}
   selector:
-    app.kubernetes.io/name: {{ include "qbittorrent.name" . }}
+    app.kubernetes.io/name: {{ include "deluge.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
