--- a/charts/deluge/templates/gui-port-svc.yaml
+++ b/charts/deluge/templates/gui-port-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "qbittorrent.fullname" . }}-gui
+  name: {{ template "deluge.fullname" . }}-gui
   labels:
-    app.kubernetes.io/name: {{ include "qbittorrent.name" . }}
-    helm.sh/chart: {{ include "qbittorrent.chart" . }}
+    app.kubernetes.io/name: {{ include "deluge.name" . }}
+    helm.sh/chart: {{ include "deluge.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 {{- if .Values.guiService.labels }}
@@ -48,5 +48,5 @@ spec:
       nodePort: {{.Values.guiService.nodePort}}
 {{ end }}
   selector:
-    app.kubernetes.io/name: {{ include "qbittorrent.name" . }}
+    app.kubernetes.io/name: {{ include "deluge.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
