--- a/charts/deluge/templates/deployment.yaml
+++ b/charts/deluge/templates/deployment.yaml
@@ -93,7 +93,7 @@ spec:
         - name: downloads
           {{- if .Values.persistence.downloads.enabled }}
           persistentVolumeClaim:
-            claimName: {{ if .Values.persistence.downloads.existingClaim }}{{ .Values.persistence.downloads.existingClaim }}{{- else }}{{ template "deluge.fullname" . }}-downloads{{- end }}
+            claimName: {{ if .Values.persistence.downloads.existingClaim }}{{ .Values.persistence.downloads.existingClaim }}{{- else }}{{ template "deluge.fullname" . }}-download{{- end }}
           {{- else }}
           emptyDir: {}
           {{ end }}
