Update chart common

--- a/charts/ffmpeg-worker/0.1.0/Chart.yaml
+++ b/charts/ffmpeg-worker/0.1.0/Chart.yaml
@@ -1,7 +1,5 @@
 name: "ffmpeg-worker"
 description: FFmpeg worker to read the RTSP streams to mpegts files
-annotations:
-  title: FFmpegWorker
 type: application
 version: 0.1.0
 apiVersion: v2
@@ -12,12 +10,8 @@ maintainers:
     email: contact@parrajust.in
 dependencies:
   - name: common
-    version: 16.2.15
-    repository: https://library-charts.truecharts.org
-    condition: ""
-    alias: ""
-    tags: []
-    import-values: []
+    repository: file://../../../common/2304.0.1
+    version: 2304.0.1
 home: https://min.io
 icon: https://ffmpeg.org/img/ffmpeg3d_white_20.png
 sources:
@@ -25,7 +19,7 @@ sources:
 keywords:
   - cameras
 annotations:
+  title: FFmpegWorker
   truecharts.org/SCALE-support: "true"
   truecharts.org/category: cameras
   truecharts.org/train: stable
-type: application
