Update ffmpeg schema

--- a/charts/ffmpeg-worker/app_versions.json
+++ b/charts/ffmpeg-worker/app_versions.json
@@ -153,22 +153,33 @@
       "questions": [
         {
           "variable": "ffmpegWorkerServiceGrpcPort",
-          "label": "Configure FFmpeg worker grpc Service",
+          "group": "Networking",
+          "label": "Port to expose for grpc service",
+          "schema": {
+            "type": "int",
+            "min": 9000,
+            "max": 65535,
+            "default": 32400
+          }
+        },
+        {
+          "variable": "ffmpegWorkerServiceHttpPort",
+          "group": "Networking",
+          "label": "Port to expose for http service",
+          "schema": {
+            "type": "int",
+            "min": 9000,
+            "max": 65535,
+            "default": 32500
+          }
+        },
+        {
+          "variable": "hostNetwork",
+          "label": "Enable Host Network",
           "group": "Networking",
           "schema": {
-            "type": "dict",
-            "attrs": [
-              {
-                "variable": "port",
-                "label": "Port to expose for grpc service",
-                "schema": {
-                  "type": "int",
-                  "min": 9000,
-                  "max": 65535,
-                  "default": 32400
-                }
-              }
-            ]
+            "type": "boolean",
+            "default": false
           }
         },
         {
@@ -185,15 +196,6 @@
           "group": "Configuration",
           "schema": {
             "type": "string"
-          }
-        },
-        {
-          "variable": "hostNetwork",
-          "label": "Enable Host Network",
-          "group": "Networking",
-          "schema": {
-            "type": "boolean",
-            "default": false
           }
         },
         {
