--- a/charts/mongodb-worker/0.1.0/questions.yaml
+++ b/charts/mongodb-worker/0.1.0/questions.yaml
@@ -66,6 +66,50 @@ questions:
                   type: string
 
   # Storage configuration
+  - variable: appVolumeMounts
+    label: "Mongodb worker Storage"
+    group: "Storage"
+    schema:
+      type: dict
+      attrs:
+        - variable: data
+          label: "Data Volume"
+          schema:
+            type: dict
+            attrs:
+              - variable: datasetName
+                label: "Mongodb Data Volume Name"
+                schema:
+                  type: string
+                  $ref:
+                    - "normalize/ixVolume"
+                  show_if: [["hostPathEnabled", "=", false]]
+                  default: "ix-mongdb_worker_data"
+                  editable: false
+                  hidden: true
+              - variable: mountPath
+                label: "Mongodb Data Mount Path"
+                description: "Path where the volume will be mounted inside the pod"
+                schema:
+                  type: path
+                  hidden: true
+                  editable: false
+                  default: "/data/db"
+              - variable: hostPathEnabled
+                label: "Enable Host Path for mongodb Data Volume"
+                schema:
+                  type: boolean
+                  default: false
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: hostPath
+                      label: "Host Path for mongodb Data Volume"
+                      schema:
+                        type: hostpath
+                        required: true
+                        $ref:
+                          - "validations/lockedHostPath"
+
   - variable: extraAppVolumeMounts
     label: "Extra Host Path Volumes"
     group: "Storage"
