--- a/charts/mongodb-worker/0.2.0/questions.yaml
+++ b/charts/mongodb-worker/0.2.0/questions.yaml
@@ -78,7 +78,7 @@ questions:
             type: dict
             attrs:
               - variable: datasetName
-                label: "Mongodb Data Volume Name"
+                label: "Data Volume Name"
                 schema:
                   type: string
                   $ref:
@@ -88,7 +88,7 @@ questions:
                   editable: false
                   hidden: true
               - variable: mountPath
-                label: "Mongodb Data Mount Path"
+                label: "Data Mount Path"
                 description: "Path where the volume will be mounted inside the pod"
                 schema:
                   type: path
@@ -96,14 +96,14 @@ questions:
                   editable: false
                   default: "/data/db"
               - variable: hostPathEnabled
-                label: "Enable Host Path for mongodb Data Volume"
+                label: "Enable Host Path"
                 schema:
                   type: boolean
                   default: false
                   show_subquestions_if: true
                   subquestions:
                     - variable: hostPath
-                      label: "Host Path for mongodb Data Volume"
+                      label: "Host Path for the Data Volume"
                       schema:
                         type: hostpath
                         required: true
