--- a/charts/mongodb-worker/0.2.0-m/Chart.yaml
+++ b/charts/mongodb-worker/0.2.0-m/Chart.yaml
@@ -1,7 +1,7 @@
 name: "mongodb-worker"
 description: Fast, reliable, scalable, and easy to use open-source no-sql database system.
 type: application
-version: mongo-v2
+version: 0.2.0-m
 apiVersion: v2
 appVersion: 7.0.4
 kubeVersion: '>=1.16.0-0'
