Fix mongodb and add full common chart

--- a/charts/mongodb-worker/2023.12.1/Chart.yaml
+++ b/charts/mongodb-worker/2023.12.1/Chart.yaml
@@ -10,6 +10,9 @@ maintainers:
     email: contact@parrajust.in
 dependencies:
   - name: common
+    repository: file://../../../common
+    version: 1.2.5
+  - name: common
     repository: file://../../../common/2304.0.1
     version: 2304.0.1
 home: https://www.mongodb.com/
