--- a/charts/mongodb-worker/2023.12.1/templates/deployment.yaml
+++ b/charts/mongodb-worker/2023.12.1/templates/deployment.yaml
@@ -1,3 +1,9 @@
+{{- include "ix.v1.common.loader.init" . -}}
+
+
+{{/* Make sure there are not any YAML errors */}}
+{{- include "ix.v1.common.values.validate" .Values -}}
+
 ---
 apiVersion: v1
 kind: Secret
@@ -111,16 +117,44 @@ spec: {{ include "common.deployment.common_spec" . | nindent 2 }}
             path: {{ $hostPathConfiguration.hostPath }}
         {{ end }}
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongodb-service
-spec:
-  selector:
-    app.kubernetes.io/name: "mongodb-worker"
-  ports:
-  - name: "manage-tcp"
-    protocol: TCP
-    port: {{ .Values.MongodbApplicationPort }}
-    nodePort: {{ .Values.MongodbApplicationPort }}
+{{/* Returns the name of the Chart */}}
+{{- define "ix.v1.common.lib.chart.names.name" -}}
+
+  {{- .Chart.Name | lower | trunc 63 | trimSuffix "-" -}}
+
+{{- end -}}
+
+{{- define "ix.v1.common.lib.chart.names.fullname" -}}
+
+  {{- $name := include "ix.v1.common.lib.chart.names.name" . -}}
+
+  {{- if contains $name .Release.Name -}}
+    {{- $name = .Release.Name -}}
+  {{- else -}}
+    {{- $name = printf "%s-%s" .Release.Name $name -}}
+  {{- end -}}
+
+  {{- $name | lower | trunc 63 | trimSuffix "-" -}}
+
+{{- end -}}
+
+{{/* Validates names */}}
+{{- define "ix.v1.common.lib.chart.names.validation" -}}
+
+  {{- $name := .name -}}
+
+  {{- if not (mustRegexMatch "^[a-z0-9]([a-z0-9]-?|-?[a-z0-9]){0,61}[a-z0-9]$" $name) -}}
+    {{- fail (printf "Name [%s] is not valid. Must start and end with an alphanumeric lowercase character. It can contain '-'. And must be at most 63 characters." $name) -}}
+  {{- end -}}
+
+{{- end -}}
+
+{{/* Create chart name and version as used by the chart label */}}
+{{- define "ix.v1.common.lib.chart.names.chart" -}}
+
+  {{- printf "%s-%s" .Chart.Name .Chart.Version | replace "+" "_" | trunc 63 | trimSuffix "-" -}}
+
+{{- end -}}
+
+
+{{ include "ix.v1.common.spawner.service" $ -}}
