Add container port

--- a/charts/mongodb-worker/2023.12.3/templates/deployment.yaml
+++ b/charts/mongodb-worker/2023.12.3/templates/deployment.yaml
@@ -45,6 +45,10 @@ spec: {{ include "common.deployment.common_spec" . | nindent 2 }}
               readOnly: {{ $hostPathConfiguration.readOnly }}
               {{ end }}
             {{ end }}
+          ports:
+          - name: "mongodb-port"
+            protocol: TCP
+            containerPort: {{ .Values.MongodbApplicationPort }}
           env:
             - name: KUBE_NAMESPACE
               valueFrom:
