--- a/charts/ffmpeg-worker/2023.12.101/questions.yaml
+++ b/charts/ffmpeg-worker/2023.12.101/questions.yaml
@@ -10,6 +10,16 @@ groups:
   - name: "Resource Limits"
     description: "Set CPU/memory limits for Kubernetes Pod"
 
+portals:
+  web_portal:
+    protocols:
+      - "$kubernetes-resource_configmap_portal_protocol"
+    host:
+      - "$kubernetes-resource_configmap_portal_host"
+    ports:
+      - "$kubernetes-resource_configmap_portal_port"
+    path: "$kubernetes-resource_configmap_portal_path"
+
 questions:
   # Configuration
   - variable: databaseConnectionString
