Fix label for videosDataPath

--- a/charts/static-videos/2023.12.2/questions.yaml
+++ b/charts/static-videos/2023.12.2/questions.yaml
@@ -23,7 +23,7 @@ portals:
 questions:
   # Configuration
   - variable: videosDataPath
-    label: "The database connection string"
+    label: "The static videos path"
     group: "Configuration"
     schema:
       type: string
